tests/snapshots/run_wpt_conformance__onnx_sub_float32_broadcast_1D_to_4D.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "sub.https.any.js",
    "sub float32 broadcast 1D to 4D",
    "onnx",
    "PASS",
)
